fix rating swag
